# dorna2-python

./: .gitignore  MANIFEST.in  MIT License  README.md  application.py  methods.md  pyproject.toml  requirements.txt  run.py  setup.py  test.ipynb
dorna2/: __init__.py  _dorna.py  blockly.py  cf.py  config.py  cuclient.py  dof_5_6.py  dorna.py  function_map.scrapy  gui.py  helper.py  ik6r.py  ik6r_2.py  ik6r_matrix.py  motion.py  node.py  pathGen.py  path_gen.py  plan.py  poly.py  pose.py  rrt.py  simulation.py  strem.py  test.py  tool.py  track.py  urdf.py  ws.py  ws_backup.py
dorna2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dorna2/cfg/: config.json  config_orig.json
dorna2/resources/urdf/: DornaTA.urdf  DornaTA_500mm_hd_rail.urdf
dorna2/simulation/: node.py  pathGen.py  pybullet-sample.py  simulation.py  urdf.py
example/: config.json  home.py  homing.py  play.py  play_file.py  play_script.py  random_joint.py  random_line.py  script.txt  set_joint.py  sub_process.py  svg_to_coordinate.py  test.txt  unit_test.py  unit_test_script.txt  vile.py  wait_input.py  ws_connect.py  ws_speed.py  ws_test.py
example/alarm/: main.py  script.txt
example/home/: config.py  home.py  main.py
example/queue_test/: main.py
example/robot_test/: main.py  script.txt
example/test/: log.txt  main.py  run.sh
templates/: configuration.html  configuration2.html  index.html  index2.html  index3.html  notes
