[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dorna2"
authors = [
    {name = "Dorna Robotics", email = "info@dorna.ai"},
]
description = "Dorna robot python"
readme = "README.md"
version = "0.10.2"

dependencies = [
    "numpy",
    "requests",
]
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT",
  "Operating System :: OS Independent"
]
[tool.setuptools.package-data]
dorna2 = ['cfg/*']

[project.urls]
"Homepage" = "https://github.com/dorna-robotics/dorna2-python"

